--- a/app/views/car.html
+++ b/app/views/car.html
@@ -19,7 +19,7 @@
     <table  class="table table-striped">
       <tr ng-repeat="row in rows | filter : search"  ng-class="{'muted':isTemp($index)}">
         <td>{{$index+1}}</td>
-        <td>{{row}}</td>
+        <td>{{row.car}}</td>
         <td>
            <button class="btn btn-danger btn-mini" ng-click="carProcessPath(row)"><i class="icon-wrench icon-white"></i></button>
         </td>
