--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
     <h1>Wel Come!</h1>
     <p class="lead">
       <img src="images/car.png" style="height:120px;width:120px;"><br>
-        Always a pleasure to desing your cars.
+        Always a pleasure to design your cars.
     </p>
     <p>
       <a class="btn btn-lg btn-success" ng-href="#/car">New car!<span class="glyphicon glyphicon-ok"></span></a>
