--- a/app/views/car.html
+++ b/app/views/car.html
@@ -16,16 +16,38 @@
         </span>
     </form>
 
-    <table  class="table table-striped">
+   <!--  <table  class="table table-striped">
       <tr ng-repeat="row in rows | filter : search"  ng-class="{'muted':isTemp($index)}">
         <td>{{$index+1}}</td>
         <td>{{row.car}}</td>
         <td>
-           <button class="btn btn-danger btn-mini" ng-click="carProcessPath(row)"><i class="icon-wrench icon-white"></i></button>
+           <button class="btn btn-danger btn-mini" href ng-click="goCats = !goCats"><i class="icon-wrench icon-white"></i>
+           </button>
+            <div calss="popup" ng-show="goCats" >
+                drffedfasdasdasdas
+            </div>
         </td>
         <td>
           <button class="btn btn-danger btn-mini" ng-click="deleteRow(row)" ng-hide="isTemp($index)"><i class="icon-trash icon-white"></i></button>
         </td>
       </tr>
-    </table>
-  </div>
+    </table>   -->
+
+    <div class="row-fluid" ng-repeat="row in rows | filter : search"  ng-class="{'muted':isTemp($index)}" >
+        <div class="span1">{{$index+1}}</div>
+        <div class="span7">{{row.car}}</div>
+        <div class="span1">
+            <button class="btn btn-danger btn-mini" href ng-click="goCats = !goCats"><i class="icon-wrench icon-white"></i>
+            </button>
+         </div>
+        <div class="span1">
+           <button class="btn btn-danger btn-mini" ng-click="deleteRow(row)" ng-hide="isTemp($index)"><i class="icon-trash icon-white"></i></button>
+        </div>
+         <div ng-show="goCats" >
+              <br/> 
+              helloooooo
+              <product-tabs></product-tabs>
+         </div>
+
+    </div>
+</div>
