--- a/app/views/car.html
+++ b/app/views/car.html
@@ -1,4 +1,4 @@
-<div class="car_dashbord">
+<div class="car_dashboard">
   <h2>{{rows.length}} Car{{plural(rows)}} 
     <span ng-show="temp">?<small class="muted"><em > (only {{rows.length-1}} actually....)</em></small>
     </span>
@@ -45,7 +45,6 @@
         </div>
          <div ng-show="goCats" >
               <br/> 
-              helloooooo
               <product-tabs></product-tabs>
          </div>
 
