--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -1,7 +1,7 @@
 
 
 .footer {
-  padding-top: 19px;
+  margin-top: 50px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
@@ -34,3 +34,9 @@
     vertical-align: top;
     border-top: 1px solid #DDD;
  }
+
+ .tabbable{
+    margin-top:20px;
+ }
+
+ 
