--- a/app/views/product-tabs.html
+++ b/app/views/product-tabs.html
@@ -1,49 +1,90 @@
 <div class="tabbable tabs-left" >
   <ul class="nav nav-tabs">
     <li ng-class="{ active:tab.isSet(1) }">
-        <a href ng-click="tab.setTab(1)">Section 1</a>
+        <a href ng-click="tab.setTab(1)">Press division</a>
     </li>
     <li ng-class="{ active:tab.isSet(2) }">
-      <a href ng-click="tab.setTab(2)">Section 2</a>
+      <a href ng-click="tab.setTab(2)">Material Logistics Division</a>
     </li>
-      <li ng-class="{ active:tab.isSet(3) }">
-      <a href ng-click="tab.setTab(3)">Section 3</a>
+    <li ng-class="{ active:tab.isSet(3) }">
+      <a href ng-click="tab.setTab(3)">Weld Division</a>
     </li>
-      <li ng-class="{ active:tab.isSet(4) }">
-      <a href ng-click="tab.setTab(4)">Section 4</a>
+    <li ng-class="{ active:tab.isSet(4) }">
+      <a href ng-click="tab.setTab(4)">Paint Division</a>
     </li>
-      <li ng-class="{ active:tab.isSet(5) }">
-      <a href ng-click="tab.setTab(5)">Section 5</a>
+    <li ng-class="{ active:tab.isSet(5) }">
+      <a href ng-click="tab.setTab(5)">Plastic Operations Division</a>
     </li>
-      <li ng-class="{ active:tab.isSet(6) }">
-      <a href ng-click="tab.setTab(6)">Section 6</a>
+    <li ng-class="{ active:tab.isSet(6) }">
+      <a href ng-click="tab.setTab(6)">Assembly Frame Division</a>
+    </li>
+    <li ng-class="{ active:tab.isSet(7) }">
+      <a href ng-click="tab.setTab(7)">Vehicle Quality Division</a>
     </li>
   </ul>
 
  
   <div  ng-show="tab.isSet(1)" >
-    <p>I'm in Section 1.</p>
-   
+  <dl>
+    <dt>The process</dt>
+    <dd>
+    The car manufacturing process begins in the Press Division where we press the body panels for the cars built on site. To start with we receive blanks: flat metal sheets that have already been cut into the basic shape of the panel. These are then loaded onto the press
+    </dd>
+  </dl>
   </div>
   <div ng-show="tab.isSet(2)">
-    <p>Howdy, I'm in Section 2.</p>
-   
+    <dl>
+      <dt>The process</dt>
+      <dd>
+      The main function of Material Logistics is to receive and deliver parts for the Weld, Assembly Frame and Paint Departments on a ‘just in time’ basis, two hours before they are fitted. While some parts are received from multiple local distribution centres, wheels, seats, door linings and engines are received on a synchronised basis directly from suppliers.
+      </dd>
+    </dl>
   </div>
   <div ng-show="tab.isSet(3)">
-    <p>Howdy, I'm in Section 3.</p>
-   
+    <dl>
+      <dt>The process</dt>
+      <dd>
+       The Weld Department produces complete welded car bodies from panels supplied both by our own Press Department as well as external suppliers.
+      </dd>
+    </dl>
   </div>
   <div ng-show="tab.isSet(4)">
-    <p>Howdy, I'm in Section 4.</p>
-   
+    <dl>
+      <dt>The process</dt>
+      <dd>
+     The main objectives of the Paint Division are to provide vehicles with a high gloss, attractive, colourful finish, with a long term durable resistance to corrosion
+      </dd>
+    </dl>
   </div>
   <div ng-show="tab.isSet(5)">
-    <p>Howdy, I'm in Section 5.</p>
-   
+    <dl>
+      <dt>The process</dt>
+      <dd>
+       The first stage is sprayed by robots, while the second (and most important) stage is sprayed manually by highly skilled associates. This ensures a consistent and high quality paint application.
+      </dd>
+    </dl>
   </div>
   <div ng-show="tab.isSet(6)">
-    <p>Howdy, I'm in Section 6.</p>
-    
+    <dl>
+      <dt>The process</dt>
+      <dd>
+      Components are physically installed onto the painted body while larger components such as the dashboard, doors and engine are pre-assembled in sub-assembly areas next to the main line.
+      </dd>
+    </dl> 
+  </div>
+  <div ng-show="tab.isSet(7)">
+    <dl>
+      <dt>The process</dt>
+      <dd>
+      <ol start="number">
+        <li>Initial Vehicle Inspection.</li>
+        <li>Sampling Inspection</li>
+        <li>Pre-Delivery Preparation</li>
+        <li>Analysis</li>
+        <li>Complete Inspection Certificate</li>
+      </ol>
+      </dd>
+    </dl> 
   </div>
 
 </div>
