--- a/app/views/product-tabs.html
+++ b/app/views/product-tabs.html
@@ -1,25 +1,25 @@
 <div class="tabbable tabs-left" >
   <ul class="nav nav-tabs">
     <li ng-class="{ active:tab.isSet(1) }">
-        <a href ng-click="tab.setTab(1)">Press division</a>
+        <a href ng-click="">Press division</a>
     </li>
     <li ng-class="{ active:tab.isSet(2) }">
-      <a href ng-click="tab.setTab(2)">Material Logistics Division</a>
+      <a href ng-click="">Material Logistics Division</a>
     </li>
     <li ng-class="{ active:tab.isSet(3) }">
-      <a href ng-click="tab.setTab(3)">Weld Division</a>
+      <a href ng-click="">Weld Division</a>
     </li>
     <li ng-class="{ active:tab.isSet(4) }">
-      <a href ng-click="tab.setTab(4)">Paint Division</a>
+      <a href ng-click="">Paint Division</a>
     </li>
     <li ng-class="{ active:tab.isSet(5) }">
-      <a href ng-click="tab.setTab(5)">Plastic Operations Division</a>
+      <a href ng-click="">Plastic Operations Division</a>
     </li>
     <li ng-class="{ active:tab.isSet(6) }">
-      <a href ng-click="tab.setTab(6)">Assembly Frame Division</a>
+      <a href ng-click="">Assembly Frame Division</a>
     </li>
     <li ng-class="{ active:tab.isSet(7) }">
-      <a href ng-click="tab.setTab(7)">Vehicle Quality Division</a>
+      <a href ng-click="">Vehicle Quality Division</a>
     </li>
   </ul>
 
@@ -31,6 +31,7 @@
     The car manufacturing process begins in the Press Division where we press the body panels for the cars built on site. To start with we receive blanks: flat metal sheets that have already been cut into the basic shape of the panel. These are then loaded onto the press
     </dd>
   </dl>
+   <button class="btn btn-primary" href ng-click="tab.setTab(2)">Next</button>
   </div>
   <div ng-show="tab.isSet(2)">
     <dl>
@@ -39,6 +40,7 @@
       The main function of Material Logistics is to receive and deliver parts for the Weld, Assembly Frame and Paint Departments on a ‘just in time’ basis, two hours before they are fitted. While some parts are received from multiple local distribution centres, wheels, seats, door linings and engines are received on a synchronised basis directly from suppliers.
       </dd>
     </dl>
+    <button class="btn btn-primary" href ng-click="tab.setTab(3)">Next</button>
   </div>
   <div ng-show="tab.isSet(3)">
     <dl>
@@ -47,6 +49,7 @@
        The Weld Department produces complete welded car bodies from panels supplied both by our own Press Department as well as external suppliers.
       </dd>
     </dl>
+    <button class="btn btn-primary" href ng-click="tab.setTab(4)">Next</button>
   </div>
   <div ng-show="tab.isSet(4)">
     <dl>
@@ -55,6 +58,7 @@
      The main objectives of the Paint Division are to provide vehicles with a high gloss, attractive, colourful finish, with a long term durable resistance to corrosion
       </dd>
     </dl>
+     <button class="btn btn-primary" href ng-click="tab.setTab(5)">Next</button>
   </div>
   <div ng-show="tab.isSet(5)">
     <dl>
@@ -63,6 +67,7 @@
        The first stage is sprayed by robots, while the second (and most important) stage is sprayed manually by highly skilled associates. This ensures a consistent and high quality paint application.
       </dd>
     </dl>
+     <button class="btn btn-primary" href ng-click="tab.setTab(6)">Next</button>
   </div>
   <div ng-show="tab.isSet(6)">
     <dl>
@@ -71,6 +76,7 @@
       Components are physically installed onto the painted body while larger components such as the dashboard, doors and engine are pre-assembled in sub-assembly areas next to the main line.
       </dd>
     </dl> 
+     <button class="btn btn-primary" href ng-click="tab.setTab(7)">Next</button>
   </div>
   <div ng-show="tab.isSet(7)">
     <dl>
@@ -85,6 +91,11 @@
       </ol>
       </dd>
     </dl> 
+     <button class="btn btn-primary" href ng-click="goCats = !goCats">Finish</button>
   </div>
 
 </div>
+
+
+
+
